kotlin-plugin/src/testFixtures/resources/testData/diagnostics/localClass.kt
package foo.bar

import app.softwork.serviceloader.ServiceLoader

interface Bar

fun main() {
    <!LOCAL_CLASS!>@ServiceLoader(Bar::class)
    class BarImpl : Bar<!>
}
